# ICT2104_Car

./: README.md
2104_Final_integrated/PICO/: Pico_M5.c
Communications/ESP05_UART/: README.md
Communications/ESP05_UART/ESP05_UART/: .ccsproject  .project  ESP8266.c  gpio_toggle_output.c  startup_msp432p401r_ccs.c  system_msp432p401r.c
Communications/MSP432_M5StickCPlus_Communications/: README.md  wifi-m5-msp.ino
Communications/MSP432_M5StickCPlus_Communications/Comms-module/: .ccsproject  .cproject  .project  comms.c
Communications/Pico_I2C_M5/: Pico_I2C.ino  README.md
Communications/Pico_I2C_M5/Pico_M5/: CMakeLists.txt  Pico_M5.c
Encoder + IR Sensor/Encoder Code/: initSpeed.c  initSpeed.h
Encoder + IR Sensor/IR Sensor Code/: CMakeLists.txt  main.c
Encoder + IR Sensor/White Box Testing/: White Box Testing (Barcode).docx  White Box Testing (Encoder).docx
Mapping/: initMapping.c  initMapping.h
Mapping/Dijkstra/: initMapping.c  initMapping.h
Motor + PWM/BlackBox testing/: Motor Blackbox Testing.xlsx
Ultrasonic + Accelerometer/: Ultrasonic video link.txt
Ultrasonic + Accelerometer/Accelerometer Codes (PICO + MPU6050)/MPU6050/: CMakeLists.txt
Ultrasonic + Accelerometer/Accelerometer Codes (PICO + MPU6050)/MPU6050/proj/: main.c  withfilter.c
Ultrasonic + Accelerometer/Ultrasonic Codes (MSP432)/: .ccsproject  .cproject  .project  Ultrasound(P3.7 input).c  startup_msp432p401r_ccs.c
uart_pc_echo_12mhz_brclk/uart_pc_echo_12mhz_brclk/: .ccsproject  .cproject  .project  startup_msp432p401r_ccs.c  uart_pc_echo_12mhz_brclk.c
(+172 files in other folders)
